--- a/Soccer.Rmd
+++ b/Soccer.Rmd
@@ -5,26 +5,27 @@ date: "16/06/2021"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, echo=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse)
+
 ```
 
-## R Markdown
+```{r, echo=FALSE}
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+x <- read_csv("birthdates.csv", col_types = cols(value = col_character()))
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+x %>% 
+  mutate(date = parse_date(str_sub(value, 2, 11))) %>% 
+  mutate(raw_month = months(date)) %>% 
+  mutate(month = parse_factor(raw_month, levels = month.name)) %>% 
+  group_by(month) %>% 
+  summarize(total = n()) %>% 
+  ggplot(aes(x=month, y = total, fill = month))+
+  geom_col()+
+  theme_classic()+
+  labs(title = "Number of of EU Soccer Player's Birthdays in each Month", subtitle = "There are more professional soccer players born in the early parts of the year.", x = "Month", y = "Number of Players", caption = "Source: Wikipedia", fill="Month")
+  
 
-```{r cars}
-summary(cars)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
